After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703764 - v4l2: bufferpool: don't forget to release buffer on error
v4l2: bufferpool: don't forget to release buffer on error
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.1.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-08 06:28 UTC by Michael Olbrich
Modified: 2013-07-08 14:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.35 KB, patch)
2013-07-08 06:28 UTC, Michael Olbrich
committed Details | Review

Description Michael Olbrich 2013-07-08 06:28:28 UTC
Created attachment 248574 [details] [review]
patch

If the pool is stopped while gst_v4l2_buffer_pool_dqbuf() waits for a
buffer then the return value is GST_FLOW_FLUSHING. In this case the buffer
to queue must also be released. Otherwise is will never be deleted or
returned to its pool.
Comment 1 Sebastian Dröge (slomo) 2013-07-08 14:27:51 UTC
commit 07e4dd3424459c05a6711df93a3a169b7822ce48
Author: Michael Olbrich <m.olbrich@pengutronix.de>
Date:   Fri Jul 5 11:51:04 2013 +0200

    v4l2: bufferpool: don't forget to release buffer on error
    
    If the pool is stopped while gst_v4l2_buffer_pool_dqbuf() waits for a
    buffer then the return value is GST_FLOW_FLUSHING. In this case the buffer
    to queue must also be released. Otherwise is will never be deleted or
    returned to its pool.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=703764